--- a/profile.html
+++ b/profile.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-    
+     <title>My Profile</title>
     </head>
     <body>
-        <h1>PROFILE</h1>
+        <h1>MY PROFILE</h1>
+        <h2>Ryo</h2>
     </body>
 </html>
