--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile | Showcase Website</title>
+    <title>Showcase Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +22,15 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="post.html">Post</a></li>
         </ul>
-    </nav>    
+    </nav>
+    <div> 
+        <img src="resources/images/home-image-1.png" class="index-main-image-container">
+    </div>
+    <div class="index-main-text-container">
+        <h1>What<br>do you think?</h1>
+        <p>This my first website</p>
+        <a href="profile.html">Look at my profile</a>
+    </div>
+    
 </body>
 </html>
