--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile | Showcase Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -22,6 +22,42 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="post.html">Post</a></li>
         </ul>
-    </nav>    
+    </nav>
+    <div class="introduction">
+        <h2>Hello! I'm Ryo</h2>
+        <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+        Just click “Edit Text” or double click me to add your own content and make changes to the font.
+        I’m a great place for you to tell a story and let your users know a little more about you.</p>
+    </div>
+    <div class="education">
+        <h2>Education</h2>
+        <table>
+            <tr>
+                <td class="edu-year">2015 - 2018</td>
+                <td class="edu-space">&#183</td>
+                <td class="edu-school">Saint Angela Junior High School</td>
+            </tr>
+            <tr>
+                <td class="edu-year">2018 - 2021</td>
+                <td class="edu-space">&#183</td>
+                <td class="edu-school">Saint Angela Senior High School</td>
+            </tr>
+        </table>
+    </div>
+    <div class="organization">
+        <h2>Organization</h2>
+        <table>
+            <tr>
+                <td class="org-year">2018 - 2019</td>
+                <td class="org-space">&#183</td>
+                <td class="org-school">Student Council IT Division Member</td>
+            </tr>
+            <tr>
+                <td class="org-year">2019 - 2020</td>
+                <td class="org-space">&#183</td>
+                <td class="org-school">Student Council IT Division Leader</td>
+            </tr>
+        </table>
+    </div>   
 </body>
 </html>
