--- a/profile.html
+++ b/profile.html
@@ -25,39 +25,51 @@
     </nav>
     <div class="introduction">
         <h2>Hello! I'm Ryo</h2>
-        <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
+        <h4>I'm a paragraph. Click here to add your own text and edit me. It’s easy.
         Just click “Edit Text” or double click me to add your own content and make changes to the font.
-        I’m a great place for you to tell a story and let your users know a little more about you.</p>
+        I’m a great place for you to tell a story and let your users know a little more about you.</h4>
     </div>
-    <div class="education">
-        <h2>Education</h2>
-        <table>
-            <tr>
-                <td class="edu-year">2015 - 2018</td>
-                <td class="edu-space">&#183</td>
-                <td class="edu-school">Saint Angela Junior High School</td>
-            </tr>
-            <tr>
-                <td class="edu-year">2018 - 2021</td>
-                <td class="edu-space">&#183</td>
-                <td class="edu-school">Saint Angela Senior High School</td>
-            </tr>
-        </table>
+    <h2 class="edu-title">Education</h2>
+    <div class="edu-container">
+        <div class="edu-timeline">
+            <ul>
+                <li>
+                    <div class="edu-timeline-content">
+                        <h2 class="edu-date">2015-2018</h2>
+                        <h1>Saint Angela<br>Junior High School</h1>
+                        <p>"A student."</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="edu-timeline-content">
+                        <h2 class="edu-date">2018-2021</h2>
+                        <h1>Saint Angela<br>Senior High School</h1>
+                        <p>"A student."</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="organization">
-        <h2>Organization</h2>
-        <table>
-            <tr>
-                <td class="org-year">2018 - 2019</td>
-                <td class="org-space">&#183</td>
-                <td class="org-school">Student Council IT Division Member</td>
-            </tr>
-            <tr>
-                <td class="org-year">2019 - 2020</td>
-                <td class="org-space">&#183</td>
-                <td class="org-school">Student Council IT Division Leader</td>
-            </tr>
-        </table>
-    </div>   
+    <h2 class="org-title">Organization</h2>
+    <div class="org-container">
+        <div class="org-timeline">
+            <ul>
+                <li>
+                    <div class="org-timeline-content">
+                        <h2 class="org-date">2018-2019</h2>
+                        <h1>Student Council</h1>
+                        <p>Member of IT Division</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="org-timeline-content">
+                        <h2 class="org-date">2019-2020</h2>
+                        <h1>Student Council</h1>
+                        <p>Head of IT Division</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>  
 </body>
 </html>
