--- a/index.html
+++ b/index.html
@@ -11,26 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/images/main-logo.png"></a>
-        </div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="post.html">Post</a></li>
-        </ul>
-    </nav>
+    <section class="header">
+        <nav>
+            <div class="main-logo">
+                <a href="index.html"><img src="resources/main-logo.png"></a>
+            </div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="post.html">Post</a></li>
+            </ul>
+        </nav>
+    </section>    
     <div> 
-        <img src="resources/images/home-image-1.png" class="index-main-image-container">
+        <img src="resources/home-image-1.png" class="index-main-image-container">
     </div>
     <div class="index-main-text-container">
         <h1>What<br>do you think?</h1>
         <p>This my first website</p>
         <a href="profile.html">Look at my profile</a>
     </div>
-    
+    <section class="course">
+        <h1>Courses We Offer</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.</p>
+    </section>
 </body>
 </html>
