--- a/dashboard.html
+++ b/dashboard.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@400;700&family=Roboto:wght@500&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
     <nav>
-        <div class="main-logo">
-            <a href="index.html"><img src="resources/images/main-logo.png"></a>
-        </div>
+        <article class="main-logo">
+            <a href="index.html"><img src="resources/main-logo.png"></a>
+        </article>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
@@ -22,6 +23,22 @@
             <li><a href="faq.html">FAQ</a></li>
             <li><a href="post.html">Post</a></li>
         </ul>
-    </nav>    
+    </nav>
+    <footer>
+        <article class="footer-content">
+            <h3>Showcase Website</h3>
+            <p>This is my showcase website</p>
+            <ul class="social-media">
+                <li><a href="facebook.com"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.instagram.com/alessandroryo/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="youtube.com"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="twitter.com"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="linkedin.com"><i class="fa fa-linkedin-square"></i></a></li>
+            </ul>
+        </article>
+        <article class="footer-bottom">
+            <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
+        </article>
+    </footer>       
 </body>
 </html>
