--- a/faq.html
+++ b/faq.html
@@ -21,9 +21,47 @@
             <li><a href="profile.html">Profile</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="post.html">Post</a></li>
+            <li><a href="blog.html">Post</a></li>
         </ul>
     </nav>
+    <main class="faq-main">
+        <h1>Frequently Asked Questions</h1>
+        <div class="faq open"><!-- FAQ 1 -->
+            <div class="faq-text">
+                <h2>How can I pay for essential or premium plan?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <span class="faq-btn">&#8722;</span>
+        </div><!-- FAQ 1 End -->
+        <div class="faq"><!-- FAQ 2 -->
+            <div class="faq-text">
+                <h2>Can I cancel my Essentials or Premium plan subscription at any time?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <span class="faq-btn">&#43;</span>
+        </div><!-- FAQ 2 End -->
+        <div class="faq"><!-- FAQ 3 -->
+            <div class="faq-text">
+                <h2>We need to add new users to our team. How will that be billed?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <span class="faq-btn">&#43;</span>
+        </div><!-- FAQ 3 End -->
+        <div class="faq"><!-- FAQ 4 -->
+            <div class="faq-text">
+                <h2>My team wants to cancel its subscription. How do we do that? Can we get a refund?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <span class="faq-btn">&#43;</span>
+        </div><!-- FAQ 4 End -->
+        <div class="faq"><!-- FAQ 5 -->
+            <div class="faq-text">
+                <h2>Do you offer discounts for non-profit organisations or educational institutions?</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+            </div>
+            <span class="faq-btn">&#43;</span>
+        </div><!-- FAQ 5 End -->
+    </main>
     <footer>
         <article class="footer-content">
             <h3>Showcase Website</h3>
@@ -39,6 +77,7 @@
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer>    
+    </footer>
+    <script src="script.js"></script>   
 </body>
 </html>
