--- a/faq.html
+++ b/faq.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css">
 </head>
-<body>
+<body class="faq-page">
     <nav>
         <article class="main-logo">
             <a href="index.html"><img src="resources/main-logo.png"></a>
@@ -25,7 +25,7 @@
             <li><a href="blog.html">Blog</a></li>
         </ul>
     </nav>
-    <main class="faq-page">
+    <main>
         <section class="faq">
             <h1>Frequently Asked Questions</h1>
             <div class="faq-container">
