--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
             <li><a href="profile.html">Profile</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="blog.html">Post</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
+        <div class="menu-toggle">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </nav>
     <header class="index-header">
-        
         <div class="index-main-text-container">
             <h1>HBO-ICT?<br>Why?</h1>
             <p>Kenapa saya memilih di jurusan HBO? Apa yang memotivasi saya? Sebelum itu,
@@ -81,6 +86,7 @@
         <article class="footer-bottom">
             <p>copyright &copy; 2021 Ryo. designed by <span>Ryo</span></p>
         </article>
-    </footer>    
+    </footer> 
+    <!-- <script src="script.js"></script> -->
     </body>
 </html>
