--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
             <li><a href="profile.html">Profile</a></li>
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="faq.html">FAQ</a></li>
-            <li><a href="blog.html">Post</a></li>
+            <li><a href="blog.html">Blog</a></li>
         </ul>
     </nav>
     <div class="profile-header">
